--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 		
-		<title>reveal.js</title>
+		<title>A/S Auto</title>
 
-		<meta name="description" content="An easy to use CSS 3D slideshow tool for quickly creating good looking HTML presentations.">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Case 12, organisasjon og ledelse">
+		<meta name="author" content="Runar Ingebrigtsen, Robert Balteskard, Alexander Wold">
 		
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		
@@ -24,7 +24,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-          <h1>AS Auto</h1>
+          <h1>Case 12: A/S Auto</h1>
 					<h3 class="inverted">Gruppe 30</h3>
           <p>Av</p>
           <ul style="list-style:none">
