--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
             </ul>
           </section>
           <section><!-- Prototype Qtrack -->
-            <iframe src="http://localhost:3001" height="768px" width="1024px"></iframe>
+            <iframe src="http://localhost:3003" height="768px" width="1024px"></iframe>
           </section>
           <section><!-- new QTrack -->
-            <iframe src="http://localhost:3000" height="768px" width="1024px"></iframe>
+            <iframe src="http://localhost:3001" height="768px" width="1024px"></iframe>
           </section>
           <section><!-- Iron -->
             <iframe src="http://localhost:3002" height="768px" width="1024px"></iframe>
@@ -162,10 +162,10 @@
             <iframe src="assets/max.png" height="768px" width="1024px" scrolling="no"></iframe>
           </section>
           <section><!-- BrowserID login -->
-            <iframe src="http://ras.rin.no/" height="768px" width="1024px"></iframe>
+            <iframe src="http://dev.myfavoritebeer.org/" height="768px" width="1024px"></iframe>
           </section>
           <section><!-- BrowserID login -->
-            <iframe src="http://dev.myfavoritebeer.org/" height="768px" width="1024px"></iframe>
+            <iframe src="assets/qtrack-bid.png" height="768px" width="1024px" scrolling="no"></iframe>
           </section>
         </section>
 					
