add qtrack browserid

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <iframe src="http://dev.myfavoritebeer.org/" height="768px" width="1024px"></iframe>
           </section>
           <section><!-- BrowserID login -->
-            <iframe src="assets/qtrack-bid.png" height="768px" width="1024px" scrolling="no"></iframe>
+            <iframe src="http://localhost:2999" height="768px" width="1024px"></iframe>
           </section>
         </section>
 					
